[package]
name = "rustmap-db"
version.workspace = true
edition.workspace = true

[dependencies]
rustmap-types = { workspace = true }
rusqlite      = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
thiserror     = { workspace = true }
tracing       = { workspace = true }
