[package]
name = "rustmap-detect"
version.workspace = true
edition.workspace = true

[dependencies]
rustmap-types = { workspace = true }
thiserror     = { workspace = true }
tracing       = { workspace = true }
tokio         = { workspace = true }
regex         = { workspace = true }
tokio-socks   = { workspace = true }
sha2          = { workspace = true }
x509-parser   = { workspace = true }
