[package]
name = "rustmap-packet"
version.workspace = true
edition.workspace = true

[dependencies]
rustmap-types = { workspace = true }
thiserror     = { workspace = true }
tracing       = { workspace = true }
async-trait   = { workspace = true }
etherparse    = { workspace = true }
pcap          = { workspace = true }
tokio         = { workspace = true }
crc32c        = { workspace = true }
rand          = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_NetworkManagement_IpHelper",
    "Win32_NetworkManagement_Ndis",
    "Win32_Networking_WinSock",
] }

[target.'cfg(target_os = "linux")'.dependencies]
caps = "0.5"
libc = "0.2"
socket2 = { version = "0.5", features = ["all"] }
